--- a/index.html
+++ b/index.html
@@ -24,203 +24,205 @@
   </head>
   <body>
     <!-- Header's info -->
-    <header>
-      <!-- Navigation -->
-      <nav class="nav-header">
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a class="nav-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <!-- Contact info -->
-      <address class="address-header">
-        <ul class="address-list">
-          <li class="address-item">
-            <a href="mailto:info@devstudio.com" class="address-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="address-item">
-            <a href="tel:+110001111111" class="address-link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
-    </header>
-    <main>
-      <!-- Headline section -->
-      <section class="headline-section">
-        <h1 class="headline-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="headline-button">Order Service</button>
-      </section>
+    <div class="container">
+      <header>
+        <!-- Navigation -->
+        <nav class="nav-header">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- Contact info -->
+        <address class="address-header">
+          <ul class="address-list">
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com" class="address-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a href="tel:+110001111111" class="address-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </header>
+      <main>
+        <!-- Headline section -->
+        <section class="headline-section">
+          <h1 class="headline-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="headline-button">Order Service</button>
+        </section>
 
-      <!-- Main features' section -->
-      <section class="features-section">
-        <h2 class="qualities-title">Our Main Qualities</h2>
-        <ul class="qualities-list">
-          <li class="qualities-item">
-            <h3 class="qualities-name">Strategy</h3>
-            <p class="features-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="qualities-item">
-            <h3 class="qualities-name">Punctuality</h3>
-            <p class="features-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="qualities-item">
-            <h3 class="qualities-name">Diligence</h3>
-            <p class="features-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="qualities-item">
-            <h3 class="qualities-name">Technologies</h3>
-            <p class="features-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <!-- Team Cards' section -->
-      <section class="team-section">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-card">
-            <img
-              src="./images/mark-card.jpg"
-              alt="Mark's photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-card-name">Mark Guerrero</h3>
-            <p class="team-card-text">Product Designer</p>
-          </li>
-          <li class="team-card">
-            <img
-              src="./images/tom-card.jpg"
-              alt="Tom's photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-card-name">Tom Ford</h3>
-            <p class="team-card-text">Frontend Developer</p>
-          </li>
-          <li class="team-card">
-            <img
-              src="./images/camilla-card.jpg"
-              alt="Camilla's photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-card-name">Camila Garcia</h3>
-            <p class="team-card-text">Marketing</p>
-          </li>
-          <li class="team-card">
-            <img
-              src="./images/danielle-card.jpg"
-              alt="Danielle's photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-card-name">Daniel Wilson</h3>
-            <p class="team-card-text">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-      <!--Portfolio section-->
-      <section class="portfolio-section">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-card">
-            <img
-              src="./images/banking-app-pic.jpg"
-              alt="Banking app picture"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-card-name">Banking App</h3>
-            <p class="portfolio-card-text">App</p>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./images/cashless-pay-pic.jpg"
-              alt="Cashless payment picture"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-card-name">Cashless Payment</h3>
-            <p class="portfolio-card-text">Marketing</p>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./images/meditation-app-pic.jpg"
-              alt="Meditation app picture"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-card-name">Meditation App</h3>
-            <p class="portfolio-card-text">App</p>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./images/taxi-service-pic.jpg"
-              alt="Taxi service picture"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-card-name">Taxi Service</h3>
-            <p class="portfolio-card-text">Marketing</p>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./images/scr-illustration-pic.jpg"
-              alt="Screen illustrations picture"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-card-name">Screen Illustrations</h3>
-            <p class="portfolio-card-text">Design</p>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./images/online-courses-pic.jpg"
-              alt="Online courses picture"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-card-name">Online Courses</h3>
-            <p class="portfolio-card-text">Marketing</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <!-- Footer's info -->
-    <footer class="footer-section">
-      <a href="./index.html" class="footer-logo"
-        >Web<span class="footer-logo-part">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing &#38; growth solutions.
-      </p>
-    </footer>
+        <!-- Main features' section -->
+        <section class="features-section">
+          <h2 class="qualities-title">Our Main Qualities</h2>
+          <ul class="qualities-list">
+            <li class="qualities-item">
+              <h3 class="qualities-name">Strategy</h3>
+              <p class="features-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="qualities-item">
+              <h3 class="qualities-name">Punctuality</h3>
+              <p class="features-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="qualities-item">
+              <h3 class="qualities-name">Diligence</h3>
+              <p class="features-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="qualities-item">
+              <h3 class="qualities-name">Technologies</h3>
+              <p class="features-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </section>
+        <!-- Team Cards' section -->
+        <section class="team-section">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-card">
+              <img
+                src="./images/mark-card.jpg"
+                alt="Mark's photo"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-card-name">Mark Guerrero</h3>
+              <p class="team-card-text">Product Designer</p>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/tom-card.jpg"
+                alt="Tom's photo"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-card-name">Tom Ford</h3>
+              <p class="team-card-text">Frontend Developer</p>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/camilla-card.jpg"
+                alt="Camilla's photo"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-card-name">Camila Garcia</h3>
+              <p class="team-card-text">Marketing</p>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/danielle-card.jpg"
+                alt="Danielle's photo"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-card-name">Daniel Wilson</h3>
+              <p class="team-card-text">UI Designer</p>
+            </li>
+          </ul>
+        </section>
+        <!--Portfolio section-->
+        <section class="portfolio-section">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-card">
+              <img
+                src="./images/banking-app-pic.jpg"
+                alt="Banking app picture"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-card-name">Banking App</h3>
+              <p class="portfolio-card-text">App</p>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./images/cashless-pay-pic.jpg"
+                alt="Cashless payment picture"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-card-name">Cashless Payment</h3>
+              <p class="portfolio-card-text">Marketing</p>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./images/meditation-app-pic.jpg"
+                alt="Meditation app picture"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-card-name">Meditation App</h3>
+              <p class="portfolio-card-text">App</p>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./images/taxi-service-pic.jpg"
+                alt="Taxi service picture"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-card-name">Taxi Service</h3>
+              <p class="portfolio-card-text">Marketing</p>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./images/scr-illustration-pic.jpg"
+                alt="Screen illustrations picture"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-card-name">Screen Illustrations</h3>
+              <p class="portfolio-card-text">Design</p>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./images/online-courses-pic.jpg"
+                alt="Online courses picture"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-card-name">Online Courses</h3>
+              <p class="portfolio-card-text">Marketing</p>
+            </li>
+          </ul>
+        </section>
+      </main>
+      <!-- Footer's info -->
+      <footer class="footer-section">
+        <a href="./index.html" class="footer-logo"
+          >Web<span class="footer-logo-part">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing &#38; growth solutions.
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
