added some margins

--- a/index.html
+++ b/index.html
@@ -27,37 +27,39 @@
     <div class="container">
       <header>
         <!-- Navigation -->
-        <nav class="nav-header">
-          <a class="logo" href="./index.html"
-            >Web<span class="logo-part">Studio</span></a
-          >
-          <ul class="nav-list">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Studio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-        <!-- Contact info -->
-        <address class="address-header">
-          <ul class="address-list">
-            <li class="address-item">
-              <a href="mailto:info@devstudio.com" class="address-link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="address-item">
-              <a href="tel:+110001111111" class="address-link"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+        <div class="header-container">
+          <nav class="nav-header">
+            <a class="logo" href="./index.html"
+              >Web<span class="logo-part">Studio</span></a
+            >
+            <ul class="nav-list">
+              <li class="nav-item">
+                <a class="nav-link" href="./index.html">Studio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <!-- Contact info -->
+          <address class="address-header">
+            <ul class="address-list">
+              <li class="address-item">
+                <a href="mailto:info@devstudio.com" class="address-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="address-item">
+                <a href="tel:+110001111111" class="address-link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
       </header>
       <main>
         <!-- Headline section -->
@@ -215,13 +217,15 @@
       </main>
       <!-- Footer's info -->
       <footer class="footer-section">
-        <a href="./index.html" class="footer-logo"
-          >Web<span class="footer-logo-part">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing &#38; growth solutions.
-        </p>
+        <div class="footer-container">
+          <a href="./index.html" class="footer-logo"
+            >Web<span class="footer-logo-part">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing &#38; growth solutions.
+          </p>
+        </div>
       </footer>
     </div>
   </body>
