--- a/index.html
+++ b/index.html
@@ -24,52 +24,55 @@
   </head>
   <body>
     <!-- Header's info -->
-    <div class="container">
-      <header>
+    
+      <header class="header">
         <!-- Navigation -->
-        <div class="header-container">
-          <nav class="nav-header">
-            <a class="logo" href="./index.html"
-              >Web<span class="logo-part">Studio</span></a
-            >
-            <ul class="nav-list">
-              <li class="nav-item">
-                <a class="nav-link" href="./index.html">Studio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="">Contacts</a>
-              </li>
-            </ul>
-          </nav>
-          <!-- Contact info -->
-          <address class="address-header">
-            <ul class="address-list">
-              <li class="address-item">
-                <a href="mailto:info@devstudio.com" class="address-link"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="address-item">
-                <a href="tel:+110001111111" class="address-link"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
+     <div class="container">
+        <nav class="nav-header">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!-- Contact info -->
+        <address class="address-header">
+          <ul class="address-list">
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com" class="address-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-item">
+              <a href="tel:+110001111111" class="address-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
       </header>
       <main>
         <!-- Headline section -->
         <section class="headline-section">
+          <div class="container">
           <h1 class="headline-title">Effective Solutions for Your Business</h1>
           <button type="button" class="headline-button">Order Service</button>
+      </div>
         </section>
 
         <!-- Main features' section -->
-        <section class="features-section">
+      <section class="features-section">
+        <div class="container">
           <h2 class="qualities-title">Our Main Qualities</h2>
           <ul class="qualities-list">
             <li class="qualities-item">
@@ -101,9 +104,11 @@
               </p>
             </li>
           </ul>
+         </div>
         </section>
         <!-- Team Cards' section -->
-        <section class="team-section">
+       <section class="team-section">
+        <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-card">
@@ -147,9 +152,11 @@
               <p class="team-card-text">UI Designer</p>
             </li>
           </ul>
+        </div>
         </section>
         <!--Portfolio section-->
-        <section class="portfolio-section">
+       <section class="portfolio-section">
+        <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-card">
@@ -213,11 +220,12 @@
               <p class="portfolio-card-text">Marketing</p>
             </li>
           </ul>
-        </section>
+        </div>
+      </section>
       </main>
       <!-- Footer's info -->
       <footer class="footer-section">
-        <div class="footer-container">
+        <div class="container">
           <a href="./index.html" class="footer-logo"
             >Web<span class="footer-logo-part">Studio</span></a
           >
