made qualities title hidden

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <!-- Main features' section -->
       <section class="features-section">
         <div class="container">
-          <h2 class="qualities-title">Our Main Qualities</h2>
+          <h2 class="visually-hidden">Our Main Qualities</h2>
           <ul class="qualities-list">
             <li class="qualities-item">
               <h3 class="qualities-name">Strategy</h3>
