--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <header class="header">
       <!-- Navigation -->
-      <div class="container">
+      <div class="container header-container">
         <nav class="nav-header">
           <a class="logo" href="./index.html"
             >Web<span class="logo-part">Studio</span></a
@@ -118,8 +118,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-card-name">Mark Guerrero</h3>
-              <p class="team-card-text">Product Designer</p>
+              <div class="team-info">
+                <h3 class="team-card-name">Mark Guerrero</h3>
+                <p class="team-card-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -128,8 +130,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-card-name">Tom Ford</h3>
-              <p class="team-card-text">Frontend Developer</p>
+              <div class="team-info">
+                <h3 class="team-card-name">Tom Ford</h3>
+                <p class="team-card-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -138,8 +142,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-card-name">Camila Garcia</h3>
-              <p class="team-card-text">Marketing</p>
+              <div class="team-info">
+                <h3 class="team-card-name">Camila Garcia</h3>
+                <p class="team-card-text">Marketing</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -148,8 +154,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-card-name">Daniel Wilson</h3>
-              <p class="team-card-text">UI Designer</p>
+              <div class="team-info">
+                <h3 class="team-card-name">Daniel Wilson</h3>
+                <p class="team-card-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -166,8 +174,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-card-name">Banking App</h3>
-              <p class="portfolio-card-text">App</p>
+              <div class="portfolio-info">
+                <h3 class="portfolio-card-name">Banking App</h3>
+                <p class="portfolio-card-text">App</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img
@@ -176,8 +186,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-card-name">Cashless Payment</h3>
-              <p class="portfolio-card-text">Marketing</p>
+              <div class="portfolio-info">
+                <h3 class="portfolio-card-name">Cashless Payment</h3>
+                <p class="portfolio-card-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img
@@ -186,8 +198,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-card-name">Meditation App</h3>
-              <p class="portfolio-card-text">App</p>
+              <div class="portfolio-info">
+                <h3 class="portfolio-card-name">Meditation App</h3>
+                <p class="portfolio-card-text">App</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img
@@ -196,8 +210,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-card-name">Taxi Service</h3>
-              <p class="portfolio-card-text">Marketing</p>
+              <div class="portfolio-info">
+                <h3 class="portfolio-card-name">Taxi Service</h3>
+                <p class="portfolio-card-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img
@@ -206,8 +222,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-card-name">Screen Illustrations</h3>
-              <p class="portfolio-card-text">Design</p>
+              <div class="portfolio-info">
+                <h3 class="portfolio-card-name">Screen Illustrations</h3>
+                <p class="portfolio-card-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-card">
               <img
@@ -216,8 +234,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-card-name">Online Courses</h3>
-              <p class="portfolio-card-text">Marketing</p>
+              <div class="portfolio-info">
+                <h3 class="portfolio-card-name">Online Courses</h3>
+                <p class="portfolio-card-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
