--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     </main>
     <!-- Footer's info -->
     <footer class="footer-section">
-      <div class="container">
+      <div class="container footer-container">
         <a href="./index.html" class="footer-logo"
           >Web<span class="footer-logo-part">Studio</span></a
         >
