--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </section>
 
       <!-- Main features' section -->
-      <section class="features-section">
+      <section class="features-section section">
         <div class="container">
           <h2 class="visually-hidden">Our Main Qualities</h2>
           <ul class="qualities-list">
@@ -107,7 +107,7 @@
         </div>
       </section>
       <!-- Team Cards' section -->
-      <section class="team-section">
+      <section class="team-section section">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -163,7 +163,7 @@
         </div>
       </section>
       <!--Portfolio section-->
-      <section class="portfolio-section">
+      <section class="portfolio-section section">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
