--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <!-- Navigation -->
       <div class="container header-container">
         <nav class="nav-header">
-          <a class="logo" href="./index.html"
+          <a class="logo header-logo" href="./index.html"
             >Web<span class="logo-part">Studio</span></a
           >
           <ul class="nav-list">
@@ -73,7 +73,7 @@
       <!-- Main features' section -->
       <section class="features-section section">
         <div class="container">
-          <h2 class="visually-hidden">Our Main Qualities</h2>
+          <h2 class="features-title visually-hidden">Our Main Qualities</h2>
           <ul class="qualities-list">
             <li class="qualities-item">
               <h3 class="qualities-name">Strategy</h3>
